use Stream toList where possible