@@ -2,7 +2,6 @@ package mezz.jei.plugins.vanilla.ingredients.fluid;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import net.minecraftforge.fluids.FluidAttributes;
 import net.minecraftforge.fluids.FluidStack;
@@ -21,6 +20,6 @@ public final class FluidStackListFactory {
 		return fluids.stream()
 			.filter(fluid -> fluid.isSource(fluid.defaultFluidState()))
 			.map(fluid -> new FluidStack(fluid, FluidAttributes.BUCKET_VOLUME))
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
